--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,9 @@
 		<title>InaClick</title>
 	</head>
 	<body>
+		<a href="/">Home</a>
+		<a href="/about/">About</a>
+
 		<h1>InaClick</h1>
 	</body>
 </html>
